--- a/css/styles.css
+++ b/css/styles.css
@@ -1258,67 +1258,67 @@ iframe {
         text-decoration: none;
         color: fade(#fff, 75%); }
 
-header {
-  background-color: yellow; }
-  header nav.mobile {
+header nav.mobile {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 90; }
+  header nav.mobile .menu {
+    position: relative;
+    margin: 0;
+    z-index: 90; }
+    header nav.mobile .menu .menu-icon {
+      position: relative;
+      padding: 15px; }
+      header nav.mobile .menu .menu-icon i {
+        font-size: 30px;
+        color: #fff; }
+  header nav.mobile .menu-active {
+    display: none;
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
-    z-index: 90; }
-    header nav.mobile .menu {
+    bottom: 0;
+    background-color: rgba(30, 140, 190, 0.95);
+    z-index: 99; }
+    header nav.mobile .menu-active .menu-icon {
       position: relative;
-      margin: 0;
-      z-index: 90; }
-      header nav.mobile .menu .menu-icon {
-        position: relative;
-        padding: 15px; }
-        header nav.mobile .menu .menu-icon i {
-          font-size: 30px;
-          color: #fff; }
-    header nav.mobile .menu-active {
-      display: none;
-      position: fixed;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      background-color: rgba(30, 140, 190, 0.95);
-      z-index: 99; }
-      header nav.mobile .menu-active .menu-icon {
-        position: relative;
-        padding: 15px; }
-        header nav.mobile .menu-active .menu-icon i {
-          font-size: 30px;
-          color: #fff; }
-      header nav.mobile .menu-active ul {
-        position: relative;
-        margin: 30px;
+      padding: 15px; }
+      header nav.mobile .menu-active .menu-icon i {
+        font-size: 30px;
+        color: #fff; }
+    header nav.mobile .menu-active ul {
+      position: relative;
+      margin: 30px;
+      padding: 0;
+      list-style: none; }
+      header nav.mobile .menu-active ul li {
+        margin: 0;
         padding: 0;
-        list-style: none; }
-        header nav.mobile .menu-active ul li {
-          margin: 0;
-          padding: 0;
-          padding-top: 0.5em;
-          padding-bottom: 0.5em;
-          list-style-type: none;
-          text-align: center;
-          border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
-          header nav.mobile .menu-active ul li:last-of-type {
-            border-bottom: 0;
-            padding-bottom: 0; }
-          header nav.mobile .menu-active ul li a {
-            display: inline;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: normal;
-            font-style: normal;
-            -webkit-font-smoothing: antialiased;
-            text-rendering: optimizeLegibility;
-            -webkit-text-size-adjust: 100%;
-            font-family: "Raleway", Helvetica, Arial, Geneva, Verdana;
-            font-weight: 700;
-            color: #fff; }
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+        list-style-type: none;
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
+        header nav.mobile .menu-active ul li:last-of-type {
+          border-bottom: 0;
+          padding-bottom: 0; }
+        header nav.mobile .menu-active ul li a {
+          display: inline;
+          text-decoration: none;
+          text-transform: uppercase;
+          font-weight: normal;
+          font-style: normal;
+          -webkit-font-smoothing: antialiased;
+          text-rendering: optimizeLegibility;
+          -webkit-text-size-adjust: 100%;
+          font-family: "Raleway", Helvetica, Arial, Geneva, Verdana;
+          font-weight: 700;
+          color: #fff; }
+header nav.desktop {
+  display: none; }
 
 #body {
   background-color: whitesmoke; }
@@ -2971,7 +2971,78 @@ header {
     padding-left: 5%; }
 
   header nav.mobile {
-    display: none; } }
+    display: none; }
+  header nav.desktop {
+    display: block;
+    position: relative; }
+    header nav.desktop ul {
+      position: relative;
+      display: table;
+      margin: 0 auto;
+      padding: 0;
+      list-style: none;
+      width: 90%; }
+      header nav.desktop ul li {
+        display: table-cell;
+        margin: 0;
+        padding: 0;
+        list-style-type: none; }
+        header nav.desktop ul li.site-logo {
+          padding-right: 5%;
+          text-align: left;
+          vertical-align: middle;
+          white-space: nowrap;
+          width: 1px; }
+          header nav.desktop ul li.site-logo img {
+            height: 75px;
+            width: auto; }
+        header nav.desktop ul li.navigation {
+          text-align: right;
+          vertical-align: middle; }
+          header nav.desktop ul li.navigation nav {
+            position: relative; }
+            header nav.desktop ul li.navigation nav.fnav {
+              position: relative; }
+            header nav.desktop ul li.navigation nav.mnav {
+              text-align: right;
+              position: relative; }
+              header nav.desktop ul li.navigation nav.mnav ul {
+                position: relative;
+                float: right;
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                width: auto; }
+                header nav.desktop ul li.navigation nav.mnav ul li {
+                  padding-left: 1em;
+                  padding-right: 1em;
+                  list-style-type: none; }
+                  header nav.desktop ul li.navigation nav.mnav ul li.current-menu-item a, header nav.desktop ul li.navigation nav.mnav ul li.current_page_item a {
+                    font-weight: normal;
+                    font-style: normal;
+                    -webkit-font-smoothing: antialiased;
+                    text-rendering: optimizeLegibility;
+                    -webkit-text-size-adjust: 100%;
+                    font-family: "Raleway", Helvetica, Arial, Geneva, Verdana;
+                    font-weight: 700;
+                    color: #333; }
+                  header nav.desktop ul li.navigation nav.mnav ul li:first-of-type {
+                    padding-left: 0; }
+                  header nav.desktop ul li.navigation nav.mnav ul li:last-of-type {
+                    padding-right: 0; }
+                  header nav.desktop ul li.navigation nav.mnav ul li a {
+                    display: inline-block;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    font-weight: normal;
+                    font-style: normal;
+                    -webkit-font-smoothing: antialiased;
+                    text-rendering: optimizeLegibility;
+                    -webkit-text-size-adjust: 100%;
+                    font-family: "", "Raleway", Helvetica, Arial, Geneva, Verdana;
+                    font-weight: 400;
+                    color: #999999; } }
 @media only screen and (min-width: 93.75em) {
   body {
     font-size: 18px; } }
