--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -730,7 +730,6 @@
 // NEW LAYOUT
 
 header {
-  background-color: yellow;
 
   nav {
 
@@ -808,6 +807,10 @@ header {
           }
         }
       }
+    }
+
+    &.desktop {
+      display: none;
     }
   }
 }
